--- a/README.html
+++ b/README.html
@@ -178,7 +178,7 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Terrorist Attacks</a>
+  <a href="attack.html">Terrorist Attacks</a>
 </li>
 <li>
   <a href="state.html">State Vulnerability</a>
