--- a/state.html
+++ b/state.html
@@ -210,7 +210,7 @@ $(document).ready(function () {
 body {
 text-align: justify}
 </style>
-<p><img src="images/unnamed-chunk-3-1.png" width="672" /></p>
+<p><img src="images/unnamed-chunk-3-1.png" width="672" style="display: block; margin: auto;" /></p>
 <p>Investigating potential trends and differences in attacks by state across time, the heatmap above shows the frequency of attacks for each state across the decades. From the heatmap, attacks appear to be most widespread across states in the 1970s and 2010s, with most states having experienced at least one attack in these two decades. On the other hand, a majority of the states did not experience any attack in the 1990s and 2000s, although a higher concentration of attacks in states like New York, District of Columbia and Florida. This may be indicative of a change in trend from having a widespread attack (attacking most states) in earlier years to more focused attacks (on few states), but a reversal to more widespread attacks in the last decade.</p>
 <p>Analysing trends in frequency of attacks for each state, certain states like California, New York and Texas have experienced attacks across all decades, with the highest number of attacks for California and New York especially in the 1970s. This may be indicative of more focused plans in targeting particular states such as these, where these states tend to have the largest population sizes and hence more frequently targeted (potentially to aim for a bigger impact).</p>
 <p><img src="images/unnamed-chunk-4-1.png" width="960" /></p>
