--- a/state.html
+++ b/state.html
@@ -184,7 +184,7 @@ $(document).ready(function () {
   <a href="state.html">State Vulnerability</a>
 </li>
 <li>
-  <a href="ideology.html">Terrorist Ideologies</a>
+  <a href="test.html">Terrorist Ideologies</a>
 </li>
 <li>
   <a href="network.html">Terrorism Networks</a>
