--- a/test.html
+++ b/test.html
@@ -210,7 +210,7 @@ $(document).ready(function () {
 body {
 text-align: justify}
 </style>
-<iframe src="https://yloong-fong.shinyapps.io/test/?showcase=0" width="1000px" height="500px">
+<iframe src="https://yloong-fong.shinyapps.io/test/?showcase=0" width="100%" height="500px">
 </iframe>
 <p>Moving on from the factors influencing states’ susceptibility to attacks, we now investigate what drives the different terrorism groups to operate and identify similarities and differences in their missions.</p>
 <p>The founding philosophies of terrorism groups describe the group’s mission and epistemological concerns. To analyse the similarities and differences in missions across the 5 dominant ideologies, the word clouds here show the most frequent terms used in describing the founding philosophies of different ideologies, colour coded by ideology type.</p>
